--- a/cafeElegante.html
+++ b/cafeElegante.html
@@ -173,8 +173,8 @@
             <div class="space-y-5">
                 <h2 class="text-white font-bold text-2xl">Newsletter</h2>
                 <div>
-                    <input class="py-1 bg-slate-800" type="text"placeholder="Enter Your Email">
-                    <button class="bg-orange-600 px-5 py-1 text-white">
+                    <input class="py-1 bg-slate-800 text-slate-300" type="text"placeholder="Enter Your Email">
+                    <button class="bg-orange-600 hover:bg-orange-900 px-5 py-1 text-white">
                         Join
                     </button>
                 </div>
